--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -1,4 +1,3 @@
-<!-- app/templates/index.html -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -14,6 +13,11 @@
       <a href="{{ url_for('about') }}">About</a>
       <a href="{{ url_for('upload') }}">Upload</a>
       <a href="{{ url_for('register') }}">Register</a>
+      {% if session.get('user') %}
+        <a href="{{ url_for('logout') }}">Logout</a>
+      {% else %}
+        <a href="{{ url_for('login') }}">Login</a>
+      {% endif %}
     </nav>
   </header>
 
